--- a/LoginPage.ui
+++ b/LoginPage.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
@@ -51,10 +51,10 @@
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0">
     <property name="spacing">
-     <number>50</number>
+     <number>100</number>
     </property>
     <item>
-     <widget class="QLabel" name="label">
+     <widget class="QLabel" name="logoLabel">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
         <horstretch>0</horstretch>
@@ -88,7 +88,7 @@
      </widget>
     </item>
     <item>
-     <widget class="QFrame" name="frame">
+     <widget class="QFrame" name="loginForm">
       <property name="enabled">
        <bool>true</bool>
       </property>
@@ -169,16 +169,16 @@
          </property>
          <property name="styleSheet">
           <string notr="true">QPushButton {
-    color: #283044;
-    background-color: #778da9;
+    color: white;
+    background-color: #1E90FF;
     padding: 8px;
-    border: 2px solid #212735;
+    border: 2px solid #1E90FF;
     border-radius: 15px;n
 }
 
 QPushButton:hover {
     background-color: transparent;
-    border-color: #778da9;
+    border-color: #1E90FF;
     color: white;
 }
 </string>
@@ -334,7 +334,7 @@ width:60px
          </property>
          <property name="styleSheet">
           <string notr="true">background-color: #ffffff;
-padding-left:5px
+padding-left:5px;
 </string>
          </property>
          <property name="echoMode">
